fix overlap components coordinations

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Colors
 $default: #1e7e81;
-$primary: #0d1ad8;
-$secondary: #23c4bc;
-$tertiary: #1cd61c;
+$primary: #2c3283;
+$secondary: green;
+$tertiary: #f8f9fa;
